--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,6 @@ input {
   width: 30%;
   height: 80%;
   border: 1px solid gray;
-  border-radius: 40px;
   font-size: 14px;
   padding: 5px;
 }
@@ -390,16 +389,62 @@ input {
 }
 
 .footer {
-  width: 100%;
+  width: 100vw;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-
   text-align: center;
   min-height: 100vh;
   background-color: #18222f;
 }
+
+.footer .support {
+  height: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.footer .support span{
+  font-size:14px;
+  color:rgb(175, 175, 175)
+}
+
+.footer .support .footer-header {
+  font-size:18px;
+  color:#fff
+}
+
+.footer .newsletter input {
+  width: 220px;
+  margin:10px;
+  height: 40px;
+  border: 1px solid #fff;
+  border-radius:10px;
+  outline-color: #fff;
+}
+
+.footer .newsletter{
+  display:flex;
+  flex-direction:column;
+  align-items: center;
+  justify-content: space-evenly
+}
+
+.footer .newsletter span{
+  font-size:15px;
+  color:#fff;
+}
+
+.footer img{
+  width: 150px;
+  height: 80px;
+}
+
+
 
 /* Responsive Media Queries */
 
@@ -417,5 +462,12 @@ input {
   .card {
     width: 90%;
     height: 250px;
+  }
+
+  .footer{
+    flex-direction: column;
+  }
+  .footer .support{
+    width: 100%;
   }
 }
